--- a/scss/bootstrap-dark.scss
+++ b/scss/bootstrap-dark.scss
@@ -63,7 +63,7 @@
  * ---------- Dark Mode ------------------------------------------------------
  */
 
-@include prefers-color-scheme(alternative-color-scheme($default-color-scheme)) {
+@include color-scheme-alt(alternative-color-scheme($default-color-scheme)) {
 
   // Layout & components
   @import "dark/root";
