--- a/scss/dark/_variables-map-alt-to-core.scss
+++ b/scss/dark/_variables-map-alt-to-core.scss
@@ -395,7 +395,6 @@ $btn-close-white-filter:                      $btn-close-white-filter-alt;
 $offcanvas-border-color:                      $offcanvas-border-color-alt;
 $offcanvas-bg-color:                          $offcanvas-bg-color-alt;
 $offcanvas-color:                             $offcanvas-color-alt;
-$offcanvas-body-backdrop-color:               $offcanvas-body-backdrop-color-alt;
 $offcanvas-box-shadow:                        $offcanvas-box-shadow-alt;
 
 // --- Code ---
@@ -407,4 +406,4 @@ $pre-color:                                   $pre-color-alt;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sat Mar 27 2021 08:10:13 GMT+1100 (Australian Eastern Daylight Time)
+// Generated: Wed Apr 21 2021 14:50:18 GMT+1000 (Australian Eastern Standard Time)
