--- a/scss/dark/_list-group.scss
+++ b/scss/dark/_list-group.scss
@@ -56,7 +56,7 @@
   $list-group-background-alt: shift-color($value, $list-group-item-bg-scale-alt);
   $list-group-color-alt: shift-color($value, $list-group-item-color-scale-alt);
   @if (contrast-ratio($list-group-background-alt, $list-group-color-alt) < $min-contrast-ratio-alt) {
-    $list-group-color-alt: mix($value, color-contrast($list-group-background-alt, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt), abs($alert-color-scale-alt));
+    $list-group-color-alt: mix($value, color-contrast($list-group-background-alt, $color-contrast-dark-alt, $color-contrast-light-alt, $min-contrast-ratio-alt), abs($list-group-item-color-scale-alt));
   }
 
   @include list-group-item-variant($state, $list-group-background-alt, $list-group-color-alt);
