--- a/scss/dark/_variables-map-core-to-temp.scss
+++ b/scss/dark/_variables-map-core-to-temp.scss
@@ -395,7 +395,6 @@ $btn-close-white-filter-temp-dnu:                      $btn-close-white-filter;
 $offcanvas-border-color-temp-dnu:                      $offcanvas-border-color;
 $offcanvas-bg-color-temp-dnu:                          $offcanvas-bg-color;
 $offcanvas-color-temp-dnu:                             $offcanvas-color;
-$offcanvas-body-backdrop-color-temp-dnu:               $offcanvas-body-backdrop-color;
 $offcanvas-box-shadow-temp-dnu:                        $offcanvas-box-shadow;
 
 // --- Code ---
@@ -407,4 +406,4 @@ $pre-color-temp-dnu:                                   $pre-color;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sat Mar 27 2021 08:10:13 GMT+1100 (Australian Eastern Daylight Time)
+// Generated: Wed Apr 21 2021 14:50:18 GMT+1000 (Australian Eastern Standard Time)
