--- a/scss/dark/_variables-map-temp-to-alt.scss
+++ b/scss/dark/_variables-map-temp-to-alt.scss
@@ -395,7 +395,6 @@ $btn-close-white-filter-alt:                      $btn-close-white-filter-temp-d
 $offcanvas-border-color-alt:                      $offcanvas-border-color-temp-dnu;
 $offcanvas-bg-color-alt:                          $offcanvas-bg-color-temp-dnu;
 $offcanvas-color-alt:                             $offcanvas-color-temp-dnu;
-$offcanvas-body-backdrop-color-alt:               $offcanvas-body-backdrop-color-temp-dnu;
 $offcanvas-box-shadow-alt:                        $offcanvas-box-shadow-temp-dnu;
 
 // --- Code ---
@@ -407,4 +406,4 @@ $pre-color-alt:                                   $pre-color-temp-dnu;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sat Mar 27 2021 08:10:13 GMT+1100 (Australian Eastern Daylight Time)
+// Generated: Wed Apr 21 2021 14:50:18 GMT+1000 (Australian Eastern Standard Time)
