--- a/scss/bootstrap-unlit.scss
+++ b/scss/bootstrap-unlit.scss
@@ -71,6 +71,8 @@ $default-color-scheme: dark;
 
 @include color-scheme-alt(alternative-color-scheme($default-color-scheme)) {
 
+  // stylelint-disable no-invalid-position-at-import-rule
+
   // Layout & components
   @import "dark/root";
   @import "dark/reboot";
