--- a/scss/bootstrap-nightshade.scss
+++ b/scss/bootstrap-nightshade.scss
@@ -21,8 +21,11 @@
 @import "dark/utilities";
 @import "dark/patch";  // missing from BS, unsupported patch/hack
 
-// Layout & components
 :root { color-scheme: light; }
+
+// stylelint-disable no-invalid-position-at-import-rule
+
+// Layout & components
 @import "root";
 @import "reboot";
 @import "type";
