--- a/scss/dark/_tables.scss
+++ b/scss/dark/_tables.scss
@@ -4,6 +4,7 @@
 
 .table {
   --#{$variable-prefix}table-bg: #{$table-bg-alt};
+  --#{$variable-prefix}table-accent-bg: #{$table-bg-alt};
   --#{$variable-prefix}table-striped-color: #{$table-striped-color-alt};
   --#{$variable-prefix}table-striped-bg: #{$table-striped-bg-alt};
   --#{$variable-prefix}table-active-color: #{$table-active-color-alt};
