fix for issue #21

--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -593,7 +593,7 @@ $figure-caption-color-alt:              $gray-400-alt !default;
 // Breadcrumbs
 // ______________________________________
 
-$breadcrumb-bg-alt:                     $gray-800-alt !default;  // null !default;
+$breadcrumb-bg-alt:                     null !default;
 $breadcrumb-divider-color-alt:          $gray-400-alt !default;
 $breadcrumb-active-color-alt:           $gray-400-alt !default;
 
