fix(tables): decouple table-bg and table-accent-bg

--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -157,6 +157,7 @@ $mark-bg-alt:                     rgba($yellow-alt, .5) !default;
 
 $table-color-alt:                 $body-color-alt !default;
 $table-bg-alt:                    transparent !default;
+$table-accent-bg-alt:             transparent !default;
 
 $table-striped-color-alt:         $table-color-alt !default;
 $table-striped-bg-factor-alt:     .05 !default;
