--- a/scss/dark/_variables-map-alt-to-core.scss
+++ b/scss/dark/_variables-map-alt-to-core.scss
@@ -76,6 +76,7 @@ $mark-bg:                                     $mark-bg-alt;
 // --- Tables ---
 $table-color:                                 $table-color-alt;
 $table-bg:                                    $table-bg-alt;
+$table-accent-bg:                             $table-accent-bg-alt;
 $table-striped-color:                         $table-striped-color-alt;
 $table-striped-bg-factor:                     $table-striped-bg-factor-alt;
 $table-striped-bg:                            $table-striped-bg-alt;
@@ -406,4 +407,4 @@ $pre-color:                                   $pre-color-alt;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Wed Apr 21 2021 14:50:18 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Sat May 29 2021 10:23:39 GMT+1000 (Australian Eastern Standard Time)
