--- a/scss/dark/_variables-map-core-to-temp.scss
+++ b/scss/dark/_variables-map-core-to-temp.scss
@@ -76,6 +76,7 @@ $mark-bg-temp-dnu:                                     $mark-bg;
 // --- Tables ---
 $table-color-temp-dnu:                                 $table-color;
 $table-bg-temp-dnu:                                    $table-bg;
+$table-accent-bg-temp-dnu:                             $table-bg;  // ***** manually changed because 5.0.1 does not have $table-accent-bg *****
 $table-striped-color-temp-dnu:                         $table-striped-color;
 $table-striped-bg-factor-temp-dnu:                     $table-striped-bg-factor;
 $table-striped-bg-temp-dnu:                            $table-striped-bg;
@@ -406,4 +407,4 @@ $pre-color-temp-dnu:                                   $pre-color;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Wed Apr 21 2021 14:50:18 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Sat May 29 2021 10:23:39 GMT+1000 (Australian Eastern Standard Time)
