--- a/scss/dark/_variables-map-temp-to-alt.scss
+++ b/scss/dark/_variables-map-temp-to-alt.scss
@@ -76,6 +76,7 @@ $mark-bg-alt:                                     $mark-bg-temp-dnu;
 // --- Tables ---
 $table-color-alt:                                 $table-color-temp-dnu;
 $table-bg-alt:                                    $table-bg-temp-dnu;
+$table-accent-bg-alt:                             $table-accent-bg-temp-dnu;
 $table-striped-color-alt:                         $table-striped-color-temp-dnu;
 $table-striped-bg-factor-alt:                     $table-striped-bg-factor-temp-dnu;
 $table-striped-bg-alt:                            $table-striped-bg-temp-dnu;
@@ -406,4 +407,4 @@ $pre-color-alt:                                   $pre-color-temp-dnu;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Wed Apr 21 2021 14:50:18 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Sat May 29 2021 10:23:39 GMT+1000 (Australian Eastern Standard Time)
