Keep up with @mdo 45d26de72 commit

--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -645,6 +645,8 @@ $offcanvas-border-color-alt:            $modal-content-border-color-alt !default
 $offcanvas-bg-color-alt:                $modal-content-bg-alt !default;
 $offcanvas-color-alt:                   $modal-content-color-alt !default;
 $offcanvas-box-shadow-alt:              $modal-content-box-shadow-xs-alt !default;
+$offcanvas-backdrop-bg-alt:             $modal-backdrop-bg-alt !default;
+$offcanvas-backdrop-opacity-alt:        $modal-backdrop-opacity-alt !default;
 
 
 // Code
