--- a/scss/dark/_mixins.scss
+++ b/scss/dark/_mixins.scss
@@ -1,4 +1,5 @@
 @import "mixins/color-scheme";
+@import "mixins/backdrop";
 @import "mixins/buttons";
 @import "mixins/forms";
 @import "mixins/table-variants";
