--- a/scss/dark/_variables-map-temp-to-alt.scss
+++ b/scss/dark/_variables-map-temp-to-alt.scss
@@ -397,6 +397,8 @@ $offcanvas-border-color-alt:                      $offcanvas-border-color-temp-d
 $offcanvas-bg-color-alt:                          $offcanvas-bg-color-temp-dnu;
 $offcanvas-color-alt:                             $offcanvas-color-temp-dnu;
 $offcanvas-box-shadow-alt:                        $offcanvas-box-shadow-temp-dnu;
+$offcanvas-backdrop-bg-alt:                       $offcanvas-backdrop-bg-temp-dnu;
+$offcanvas-backdrop-opacity-alt:                  $offcanvas-backdrop-opacity-temp-dnu;
 
 // --- Code ---
 $code-color-alt:                                  $code-color-temp-dnu;
@@ -407,4 +409,4 @@ $pre-color-alt:                                   $pre-color-temp-dnu;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sat May 29 2021 10:23:39 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Sun Jun 27 2021 18:18:02 GMT+1000 (Australian Eastern Standard Time)
