--- a/scss/dark/_variables-map-alt-to-core.scss
+++ b/scss/dark/_variables-map-alt-to-core.scss
@@ -397,6 +397,8 @@ $offcanvas-border-color:                      $offcanvas-border-color-alt;
 $offcanvas-bg-color:                          $offcanvas-bg-color-alt;
 $offcanvas-color:                             $offcanvas-color-alt;
 $offcanvas-box-shadow:                        $offcanvas-box-shadow-alt;
+$offcanvas-backdrop-bg:                       $offcanvas-backdrop-bg-alt;
+$offcanvas-backdrop-opacity:                  $offcanvas-backdrop-opacity-alt;
 
 // --- Code ---
 $code-color:                                  $code-color-alt;
@@ -407,4 +409,4 @@ $pre-color:                                   $pre-color-alt;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sat May 29 2021 10:23:39 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Sun Jun 27 2021 18:18:02 GMT+1000 (Australian Eastern Standard Time)
