--- a/scss/dark/_variables-map-core-to-temp.scss
+++ b/scss/dark/_variables-map-core-to-temp.scss
@@ -76,7 +76,7 @@ $mark-bg-temp-dnu:                                     $mark-bg;
 // --- Tables ---
 $table-color-temp-dnu:                                 $table-color;
 $table-bg-temp-dnu:                                    $table-bg;
-$table-accent-bg-temp-dnu:                             $table-bg;  // ***** manually changed because 5.0.1 does not have $table-accent-bg *****
+$table-accent-bg-temp-dnu:                             $table-accent-bg;
 $table-striped-color-temp-dnu:                         $table-striped-color;
 $table-striped-bg-factor-temp-dnu:                     $table-striped-bg-factor;
 $table-striped-bg-temp-dnu:                            $table-striped-bg;
@@ -397,6 +397,8 @@ $offcanvas-border-color-temp-dnu:                      $offcanvas-border-color;
 $offcanvas-bg-color-temp-dnu:                          $offcanvas-bg-color;
 $offcanvas-color-temp-dnu:                             $offcanvas-color;
 $offcanvas-box-shadow-temp-dnu:                        $offcanvas-box-shadow;
+$offcanvas-backdrop-bg-temp-dnu:                       $offcanvas-backdrop-bg;
+$offcanvas-backdrop-opacity-temp-dnu:                  $offcanvas-backdrop-opacity;
 
 // --- Code ---
 $code-color-temp-dnu:                                  $code-color;
@@ -407,4 +409,4 @@ $pre-color-temp-dnu:                                   $pre-color;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sat May 29 2021 10:23:39 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Sun Jun 27 2021 18:18:02 GMT+1000 (Australian Eastern Standard Time)
