address for commit 0fc117cec in core

--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -446,6 +446,7 @@ $card-border-color-alt: rgba($white-alt, .125) !default;
 $card-cap-bg-alt:       rgba($white-alt, .03) !default;
 $card-cap-color-alt:    null !default;
 $card-color-alt:        null !default;
+$card-box-shadow-alt:   null !default;
 $card-bg-alt:           $gray-900-alt !default;
 
 
