--- a/scss/dark/_variables-map-alt-to-core.scss
+++ b/scss/dark/_variables-map-alt-to-core.scss
@@ -270,6 +270,7 @@ $card-border-color:                           $card-border-color-alt;
 $card-cap-bg:                                 $card-cap-bg-alt;
 $card-cap-color:                              $card-cap-color-alt;
 $card-color:                                  $card-color-alt;
+$card-box-shadow:                             $card-box-shadow-alt;
 $card-bg:                                     $card-bg-alt;
 
 // --- Accordion ---
@@ -409,4 +410,4 @@ $pre-color:                                   $pre-color-alt;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sun Jun 27 2021 18:18:02 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Thu Jul 08 2021 20:04:22 GMT+1000 (Australian Eastern Standard Time)
