--- a/scss/dark/_variables-map-temp-to-alt.scss
+++ b/scss/dark/_variables-map-temp-to-alt.scss
@@ -270,6 +270,7 @@ $card-border-color-alt:                           $card-border-color-temp-dnu;
 $card-cap-bg-alt:                                 $card-cap-bg-temp-dnu;
 $card-cap-color-alt:                              $card-cap-color-temp-dnu;
 $card-color-alt:                                  $card-color-temp-dnu;
+$card-box-shadow-alt:                             $card-box-shadow-temp-dnu;
 $card-bg-alt:                                     $card-bg-temp-dnu;
 
 // --- Accordion ---
@@ -409,4 +410,4 @@ $pre-color-alt:                                   $pre-color-temp-dnu;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sun Jun 27 2021 18:18:02 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Thu Jul 08 2021 20:04:22 GMT+1000 (Australian Eastern Standard Time)
