--- a/scss/dark/_variables-map-core-to-temp.scss
+++ b/scss/dark/_variables-map-core-to-temp.scss
@@ -270,6 +270,7 @@ $card-border-color-temp-dnu:                           $card-border-color;
 $card-cap-bg-temp-dnu:                                 $card-cap-bg;
 $card-cap-color-temp-dnu:                              $card-cap-color;
 $card-color-temp-dnu:                                  $card-color;
+$card-box-shadow-temp-dnu:                             $card-box-shadow;
 $card-bg-temp-dnu:                                     $card-bg;
 
 // --- Accordion ---
@@ -409,4 +410,4 @@ $pre-color-temp-dnu:                                   $pre-color;
 // !! Don't remove the next 2 lines
 // fusv-enable
 // stylelint-enable
-// Generated: Sun Jun 27 2021 18:18:02 GMT+1000 (Australian Eastern Standard Time)
+// Generated: Thu Jul 08 2021 20:04:22 GMT+1000 (Australian Eastern Standard Time)
