--- a/scss/_variables-alt.scss
+++ b/scss/_variables-alt.scss
@@ -94,6 +94,227 @@ $min-contrast-ratio-alt:   2.5 !default;
 $color-contrast-dark-alt:      $black-alt !default;
 $color-contrast-light-alt:     $white-alt !default;
 
+// fusv-disable
+$blue-100-alt: shade-color($blue-alt, 80%) !default;
+$blue-200-alt: shade-color($blue-alt, 60%) !default;
+$blue-300-alt: shade-color($blue-alt, 40%) !default;
+$blue-400-alt: shade-color($blue-alt, 20%) !default;
+$blue-500-alt: $blue-alt !default;
+$blue-600-alt: tint-color($blue-alt, 20%) !default;
+$blue-700-alt: tint-color($blue-alt, 40%) !default;
+$blue-800-alt: tint-color($blue-alt, 60%) !default;
+$blue-900-alt: tint-color($blue-alt, 80%) !default;
+
+$indigo-100-alt: shade-color($indigo-alt, 80%) !default;
+$indigo-200-alt: shade-color($indigo-alt, 60%) !default;
+$indigo-300-alt: shade-color($indigo-alt, 40%) !default;
+$indigo-400-alt: shade-color($indigo-alt, 20%) !default;
+$indigo-500-alt: $indigo-alt !default;
+$indigo-600-alt: tint-color($indigo-alt, 20%) !default;
+$indigo-700-alt: tint-color($indigo-alt, 40%) !default;
+$indigo-800-alt: tint-color($indigo-alt, 60%) !default;
+$indigo-900-alt: tint-color($indigo-alt, 80%) !default;
+
+$purple-100-alt: shade-color($purple-alt, 80%) !default;
+$purple-200-alt: shade-color($purple-alt, 60%) !default;
+$purple-300-alt: shade-color($purple-alt, 40%) !default;
+$purple-400-alt: shade-color($purple-alt, 20%) !default;
+$purple-500-alt: $purple-alt !default;
+$purple-600-alt: tint-color($purple-alt, 20%) !default;
+$purple-700-alt: tint-color($purple-alt, 40%) !default;
+$purple-800-alt: tint-color($purple-alt, 60%) !default;
+$purple-900-alt: tint-color($purple-alt, 80%) !default;
+
+$pink-100-alt: shade-color($pink-alt, 80%) !default;
+$pink-200-alt: shade-color($pink-alt, 60%) !default;
+$pink-300-alt: shade-color($pink-alt, 40%) !default;
+$pink-400-alt: shade-color($pink-alt, 20%) !default;
+$pink-500-alt: $pink-alt !default;
+$pink-600-alt: tint-color($pink-alt, 20%) !default;
+$pink-700-alt: tint-color($pink-alt, 40%) !default;
+$pink-800-alt: tint-color($pink-alt, 60%) !default;
+$pink-900-alt: tint-color($pink-alt, 80%) !default;
+
+$red-100-alt: shade-color($red-alt, 80%) !default;
+$red-200-alt: shade-color($red-alt, 60%) !default;
+$red-300-alt: shade-color($red-alt, 40%) !default;
+$red-400-alt: shade-color($red-alt, 20%) !default;
+$red-500-alt: $red-alt !default;
+$red-600-alt: tint-color($red-alt, 20%) !default;
+$red-700-alt: tint-color($red-alt, 40%) !default;
+$red-800-alt: tint-color($red-alt, 60%) !default;
+$red-900-alt: tint-color($red-alt, 80%) !default;
+
+$orange-100-alt: shade-color($orange-alt, 80%) !default;
+$orange-200-alt: shade-color($orange-alt, 60%) !default;
+$orange-300-alt: shade-color($orange-alt, 40%) !default;
+$orange-400-alt: shade-color($orange-alt, 20%) !default;
+$orange-500-alt: $orange-alt !default;
+$orange-600-alt: tint-color($orange-alt, 20%) !default;
+$orange-700-alt: tint-color($orange-alt, 40%) !default;
+$orange-800-alt: tint-color($orange-alt, 60%) !default;
+$orange-900-alt: tint-color($orange-alt, 80%) !default;
+
+$yellow-100-alt: shade-color($yellow-alt, 80%) !default;
+$yellow-200-alt: shade-color($yellow-alt, 60%) !default;
+$yellow-300-alt: shade-color($yellow-alt, 40%) !default;
+$yellow-400-alt: shade-color($yellow-alt, 20%) !default;
+$yellow-500-alt: $yellow-alt !default;
+$yellow-600-alt: tint-color($yellow-alt, 20%) !default;
+$yellow-700-alt: tint-color($yellow-alt, 40%) !default;
+$yellow-800-alt: tint-color($yellow-alt, 60%) !default;
+$yellow-900-alt: tint-color($yellow-alt, 80%) !default;
+
+$green-100-alt: shade-color($green-alt, 80%) !default;
+$green-200-alt: shade-color($green-alt, 60%) !default;
+$green-300-alt: shade-color($green-alt, 40%) !default;
+$green-400-alt: shade-color($green-alt, 20%) !default;
+$green-500-alt: $green-alt !default;
+$green-600-alt: tint-color($green-alt, 20%) !default;
+$green-700-alt: tint-color($green-alt, 40%) !default;
+$green-800-alt: tint-color($green-alt, 60%) !default;
+$green-900-alt: tint-color($green-alt, 80%) !default;
+
+$teal-100-alt: shade-color($teal-alt, 80%) !default;
+$teal-200-alt: shade-color($teal-alt, 60%) !default;
+$teal-300-alt: shade-color($teal-alt, 40%) !default;
+$teal-400-alt: shade-color($teal-alt, 20%) !default;
+$teal-500-alt: $teal-alt !default;
+$teal-600-alt: tint-color($teal-alt, 20%) !default;
+$teal-700-alt: tint-color($teal-alt, 40%) !default;
+$teal-800-alt: tint-color($teal-alt, 60%) !default;
+$teal-900-alt: tint-color($teal-alt, 80%) !default;
+
+$cyan-100-alt: shade-color($cyan-alt, 80%) !default;
+$cyan-200-alt: shade-color($cyan-alt, 60%) !default;
+$cyan-300-alt: shade-color($cyan-alt, 40%) !default;
+$cyan-400-alt: shade-color($cyan-alt, 20%) !default;
+$cyan-500-alt: $cyan-alt !default;
+$cyan-600-alt: tint-color($cyan-alt, 20%) !default;
+$cyan-700-alt: tint-color($cyan-alt, 40%) !default;
+$cyan-800-alt: tint-color($cyan-alt, 60%) !default;
+$cyan-900-alt: tint-color($cyan-alt, 80%) !default;
+
+$blues-alt: (
+  "blue-100": $blue-100-alt,
+  "blue-200": $blue-200-alt,
+  "blue-300": $blue-300-alt,
+  "blue-400": $blue-400-alt,
+  "blue-500": $blue-500-alt,
+  "blue-600": $blue-600-alt,
+  "blue-700": $blue-700-alt,
+  "blue-800": $blue-800-alt,
+  "blue-900": $blue-900-alt
+) !default;
+
+$indigos-alt: (
+  "indigo-100": $indigo-100-alt,
+  "indigo-200": $indigo-200-alt,
+  "indigo-300": $indigo-300-alt,
+  "indigo-400": $indigo-400-alt,
+  "indigo-500": $indigo-500-alt,
+  "indigo-600": $indigo-600-alt,
+  "indigo-700": $indigo-700-alt,
+  "indigo-800": $indigo-800-alt,
+  "indigo-900": $indigo-900-alt
+) !default;
+
+$purples-alt: (
+  "purple-100": $purple-200-alt,
+  "purple-200": $purple-100-alt,
+  "purple-300": $purple-300-alt,
+  "purple-400": $purple-400-alt,
+  "purple-500": $purple-500-alt,
+  "purple-600": $purple-600-alt,
+  "purple-700": $purple-700-alt,
+  "purple-800": $purple-800-alt,
+  "purple-900": $purple-900-alt
+) !default;
+
+$pinks-alt: (
+  "pink-100": $pink-100-alt,
+  "pink-200": $pink-200-alt,
+  "pink-300": $pink-300-alt,
+  "pink-400": $pink-400-alt,
+  "pink-500": $pink-500-alt,
+  "pink-600": $pink-600-alt,
+  "pink-700": $pink-700-alt,
+  "pink-800": $pink-800-alt,
+  "pink-900": $pink-900-alt
+) !default;
+
+$reds-alt: (
+  "red-100": $red-100,
+  "red-200": $red-200,
+  "red-300": $red-300,
+  "red-400": $red-400,
+  "red-500": $red-500,
+  "red-600": $red-600,
+  "red-700": $red-700,
+  "red-800": $red-800,
+  "red-900": $red-900
+) !default;
+
+$oranges-alt: (
+  "orange-100": $orange-100-alt,
+  "orange-200": $orange-200-alt,
+  "orange-300": $orange-300-alt,
+  "orange-400": $orange-400-alt,
+  "orange-500": $orange-500-alt,
+  "orange-600": $orange-600-alt,
+  "orange-700": $orange-700-alt,
+  "orange-800": $orange-800-alt,
+  "orange-900": $orange-900-alt
+) !default;
+
+$yellows-alt: (
+  "yellow-100": $yellow-100-alt,
+  "yellow-200": $yellow-200-alt,
+  "yellow-300": $yellow-300-alt,
+  "yellow-400": $yellow-400-alt,
+  "yellow-500": $yellow-500-alt,
+  "yellow-600": $yellow-600-alt,
+  "yellow-700": $yellow-700-alt,
+  "yellow-800": $yellow-800-alt,
+  "yellow-900": $yellow-900-alt
+) !default;
+
+$greens-alt: (
+  "green-100": $green-100-alt,
+  "green-200": $green-200-alt,
+  "green-300": $green-300-alt,
+  "green-400": $green-400-alt,
+  "green-500": $green-500-alt,
+  "green-600": $green-600-alt,
+  "green-700": $green-700-alt,
+  "green-800": $green-800-alt,
+  "green-900": $green-900-alt
+) !default;
+
+$teals-alt: (
+  "teal-100": $teal-100-alt,
+  "teal-200": $teal-200-alt,
+  "teal-300": $teal-300-alt,
+  "teal-400": $teal-400-alt,
+  "teal-500": $teal-500-alt,
+  "teal-600": $teal-600-alt,
+  "teal-700": $teal-700-alt,
+  "teal-800": $teal-800-alt,
+  "teal-900": $teal-900-alt
+) !default;
+
+$cyans-alt: (
+  "cyan-100": $cyan-100-alt,
+  "cyan-200": $cyan-200-alt,
+  "cyan-300": $cyan-300-alt,
+  "cyan-400": $cyan-400-alt,
+  "cyan-500": $cyan-500-alt,
+  "cyan-600": $cyan-600-alt,
+  "cyan-700": $cyan-700-alt,
+  "cyan-800": $cyan-800-alt,
+  "cyan-900": $cyan-900-alt
+) !default;
+// fusv-enable
 
 // Gradient
 // ______________________________________
