Update _floating-labels.scss, fix for issue #30

--- a/scss/dark/forms/_floating-labels.scss
+++ b/scss/dark/forms/_floating-labels.scss
@@ -5,9 +5,9 @@
   // }
 
   > .form-control {
-    // &::placeholder {
-    //   color: transparent;
-    // }
+    &::placeholder {
+      color: transparent;
+    }
   }
 
   > .form-control:focus,
