--- a/scss/dark/_helpers.scss
+++ b/scss/dark/_helpers.scss
@@ -2,6 +2,8 @@
 @import "helpers/colored-links";
 // @import "helpers/ratio";  // no colors here
 // @import "helpers/position";  // no colors here
+// @import "helpers/stacks";  // no colors here
 // @import "helpers/visually-hidden";  // no colors here
 // @import "helpers/stretched-link";  // no colors here
 // @import "helpers/text-truncation";  // no colors here
+@import "helpers/vr";
