--- a/scss/dark/_tables.scss
+++ b/scss/dark/_tables.scss
@@ -24,9 +24,9 @@
   // }
 
   // Highlight border color between thead, tbody and tfoot.
-  // > :not(:last-child) > :last-child > * {
-  //   border-bottom-color: $table-group-separator-color-alt;
-  // }
+  > :not(:last-child) > :last-child > * {
+    border-bottom-color: $table-group-separator-color-alt;
+  }
 }
 
 
